--- a/webApi/pom.xml
+++ b/webApi/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>spring-web</artifactId>
             <version>5.3.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.1.0</version>
+        </dependency>
     </dependencies>
 </project>
